[gd_scene load_steps=2 format=3 uid="uid://cxqs3vkhi1m3i"]

[ext_resource type="Script" path="res://Scenes/graph_setup.gd" id="1_01itu"]

[node name="GraphSetup" type="Node2D"]
script = ExtResource("1_01itu")

[node name="Background" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = -12.0
offset_right = 1184.0
offset_bottom = 671.0
mouse_filter = 2
color = Color(0.0905659, 0.119535, 0.2476, 1)

[node name="AddNodeButton" type="Button" parent="."]
offset_left = 959.0
offset_top = 551.0
offset_right = 1133.0
offset_bottom = 631.0
text = "Tambah Simpul"

[node name="StartSimulationButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 550.0
offset_right = 193.0
offset_bottom = 631.0
text = "Mulai Simulasi"

[node name="NewNodeDefPosition" type="Marker2D" parent="."]
position = Vector2(582, 309)

[node name="Button" type="Button" parent="."]
offset_left = 206.0
offset_top = 551.0
offset_right = 372.0
offset_bottom = 632.0
text = "Clear"

[node name="Node2D" type="Node2D" parent="."]

[node name="SpeedInput" type="LineEdit" parent="Node2D"]
offset_left = 988.0
offset_top = 49.0
offset_right = 1082.0
offset_bottom = 80.0
placeholder_text = "0"

[node name="label" type="Label" parent="Node2D"]
offset_left = 987.0
offset_top = 24.0
offset_right = 1142.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 15
text = "Kecepatan rata-rata"

[node name="Label2" type="Label" parent="Node2D"]
offset_left = 1093.0
offset_top = 52.0
offset_right = 1134.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.964436, 0.854238, 7.70092e-07, 1)
text = "km/h"

[node name="Result" type="ColorRect" parent="."]
offset_top = 494.0
offset_right = 1151.0
offset_bottom = 671.0
color = Color(0.0941176, 0.105882, 0.160784, 1)

[node name="Title" type="Label" parent="Result"]
layout_mode = 0
offset_left = 18.0
offset_top = 16.0
offset_right = 58.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 15
text = "SEMUA LINTASAN"

[node name="RouteList" type="ItemList" parent="Result"]
layout_mode = 0
offset_left = 19.0
offset_top = 44.0
offset_right = 576.0
offset_bottom = 161.0
item_count = 4
item_0/text = "A-C-F | 26 km | 2.6 jam"
item_1/text = "A-B-D-F | 30,4 km | 3,03 jam"
item_2/text = "A-B-D-E-F | 24 km | 2.44 jam"
item_3/text = "A-B-D-C-F | 29.8 km | 2.9 jam"

[node name="Title2" type="Label" parent="Result"]
layout_mode = 0
offset_left = 593.0
offset_top = 17.0
offset_right = 822.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 15
text = "DITEMUKAN RUTE TERCEPAT: "

[node name="ColorRect" type="ColorRect" parent="Result"]
layout_mode = 0
offset_left = 593.0
offset_top = 45.0
offset_right = 940.0
offset_bottom = 162.0
color = Color(0.0980392, 0.101961, 0.12549, 1)

[node name="BestRoute" type="Label" parent="Result/ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 12.0
offset_right = 107.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0, 0.563816, 0, 1)
theme_override_font_sizes/font_size = 25
text = "A-B-C-D"

[node name="BestDistanceAndDuration" type="Label" parent="Result/ColorRect"]
layout_mode = 0
offset_left = 18.0
offset_top = 51.0
offset_right = 175.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.964706, 0.854902, 0, 1)
text = "Total jarak: 26 km
Total durasi: 2.6 jam"

[node name="StartOverButton" type="Button" parent="Result"]
layout_mode = 0
offset_left = 953.0
offset_top = 118.0
offset_right = 1137.0
offset_bottom = 162.0
text = "Atur Ulang Graf"

[connection signal="pressed" from="AddNodeButton" to="." method="_on_add_node_button_pressed"]
[connection signal="pressed" from="StartSimulationButton" to="." method="_on_start_simulation_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Result/StartOverButton" to="." method="_on_start_over_button_pressed"]
